github pages index.html entry point added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
     <div class="container">
-        <h1>Machine Learning Basics - W.I.P by `engagepy`</h1>
+        <h1>Machine Learning Basics - Work in Progress</h1>
 
         <h2>Using This Repository</h2>
         <p>Clone and run the repository with:</p>
