--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Learning Basics</title>
+    <title>Machine Learning Basics by Zorawar Purohit</title>
     <style>
         /* Global Styles */
         body {
@@ -106,7 +106,7 @@
 <body>
 
     <div class="container">
-        <h1>Machine Learning Basics - Work in Progress</h1>
+        <h1>Machine Learning Basics by Zorawar Purohit - W.I.P</h1>
 
         <h2>Using This Repository</h2>
         <p>Clone and run the repository with:</p>
