min_max updates

--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@ python3 &lt;filename&gt;.py</code></pre>
         <h2>File Structure</h2>
         <p>Each file is a lesson covering a specific ML topic:</p>
         <ul>
-            <li><code>binning.py</code> - Binning in Machine Learning</li>
-            <li><code>min_max.py</code> - Min-Max Normalization</li>
+
+            <li><code>mix_max_normalization.py</code> - Min-Max Normalization Foundation Math</li>
+            <li><code>min_max_scaler.py</code> - Min-Max Scaler via Scikit-Learn</li>
+            <li><code>binning.py</code> - Binning in Machine Learning via Scikit-Learn</li>
         </ul>
     </div>
 
