--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@ python3 &lt;filename&gt;.py
         <ul>
             <li><a href="">data_centering.py</a> - Data Centering in Machine Learning</li>
             <div class="key-concept">
-                🔑 <code>spent_normalized = (spent - min_spent)/(max_spent - min_spent)</code>
+                🔑 <code>>centered_data = data - mean</code>
             </div>
             <li><a href="">data_standardization.py</a> - Standardization Foundation Math</li>
             <div class="key-concept">
-                🔑 <code>spent_normalized = (spent - min_spent)/(max_spent - min_spent)</code>
+                🔑 <code>standardized_data = (data - mean)/std_dev</code>
             </div>
             <li><a href="">standard_scaler.py</a> - Standard Scaler via Scikit-Learn</li>
             <div class="key-concept">
-                🔑 <code>spent_normalized = (spent - min_spent)/(max_spent - min_spent)</code>
+                🔑 <code>sklearn.preprocessing import StandardScaler</code>
             </div>
             <li><a href="">min_max_normalization.py</a> - Min-Max Normalization Foundation Math</li>
             <div class="key-concept">
